added committee page

--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
 								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Registrations</a> 
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a>
-								<li class="nav-item"><a class="nav-link" href="speakers.html">Committies</a>
+								<li class="nav-item"><a class="nav-link" href="committees.html">committees </a>
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Accomodation</a>
 								<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a>
 							</ul>
@@ -239,7 +239,7 @@
         
         
        <!--================ start footer Area  =================-->
-	<footer class="footer-area p_120">
+	<footer class="footer-area pad_top pad_btm_50">
 		<div class="container">
 			<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
