--- a/committees.html
+++ b/committees.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/logo.png" type="image/png">
-        <title>Speakers</title>
+        <title>Committees</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -40,7 +40,7 @@
 								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Registrations</a> 
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a>
-								<li class="nav-item"><a class="nav-link" href="committees.html">committees </a>
+								<li class="nav-item"><a class="nav-link" href="#">committees </a>
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Accomodation</a>
 								<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a>
 							</ul>
@@ -61,9 +61,9 @@
 					<div class="banner_content text-center">
 						<div class="page_link">
 							<a href="index.html">Home</a>
-							<a href="speakers.html">Speakers</a>
+							<a href="#">Committees</a>
 						</div>
-						<h2>Speakers</h2>
+						<h2>Committees</h2>
 					</div>
 				</div>
             </div>
@@ -71,144 +71,84 @@
         <!--================End Home Banner Area =================-->
         
         <!--================Team Area =================-->
-        <section class="team_area p_120">
-        	<div class="container">
-        		<div class="main_title">
-        			<h2>Meet Head Speakers</h2>
-        			<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
-        		</div>
-        		<div class="row team_inner">
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-1.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-2.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-3.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-4.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-1.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-2.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-3.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-3 col-sm-6">
-        				<div class="team_item">
-        					<div class="team_img">
-        						<img class="img-fluid" src="img/team/team-4.jpg" alt="">
-        						<div class="hover">
-        							<a href="#"><i class="fa fa-facebook"></i></a>
-        							<a href="#"><i class="fa fa-twitter"></i></a>
-        							<a href="#"><i class="fa fa-linkedin"></i></a>
-        						</div>
-        					</div>
-        					<div class="team_name">
-        						<h4>Ethel Davis</h4>
-        						<p>Managing Director (Sales)</p>
-        					</div>
-        				</div>
-        			</div>
-        		</div>
-        	</div>
-        </section>
+        <div class="resp_margin_commt">
+            <h1>Technical Committee</h1> 
+            <br/>
+            <table class="table table-striped">
+                <!-- <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                </tr>
+                </thead> -->
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Dr. Banshidhar Majhi</td>
+                        <td>Professor, NIT Rourkela</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <br/>
+
+            <h1>Organizing Committee</h1>
+            <br/>
+            <table class="table table-striped">
+                <h2 style="text-align: center;">Conveners</h2>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Dr. Banshidhar Majhi</td>
+                        <td>Professor, NIT Rourkela</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <br/>
+            <table class="table table-striped">
+                <h2 style="text-align: center;">Coordinators</h2>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Dr. Banshidhar Majhi</td>
+                        <td>Professor, NIT Rourkela</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <!--================End Team Area =================-->
         
         <!--================ start footer Area  =================-->
