--- a/index.html
+++ b/index.html
@@ -431,106 +431,171 @@
 			allowfullscreen=""></iframe>
 	</section>
 	<!--================End Event Map Area =================-->
-	<!--================ start footer Area  =================-->
-	<footer class="footer-area pad_top pad_btm_50">
-		<div class="container">
-			<div class="row" style="text-align: center; margin:auto;">
-				<div class="col-lg-1 col-md-2 col-sm-2"></div>
-				<div class="col-lg-3  col-md-6 col-sm-6">
-					<div class="single-footer-widget tp_widgets">
-						<h6 class="footer_title">Contact Us</h6>
-						Vasavi College of Engineering<br />
-						<em><small> (Private Un-aided Non-minority
-								Autonomous Institution)<br /></small></em>
-						Affiliated to Osmania University, Hyderabad <br />
-						Approved by AICTE, New Delhi<br />
-						9-5-81, Ibrahimbagh<br />
-						Hyderabad - 500 031<br />
-						Telangana, India<br /><br />
 
-						Tel: +91 40 23146003<br />
-						Fax: +91 40 23146090<br /> <br />
-
-						<!-- <a
-							   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
-								   class="__cf_email__"
-								   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
-						Email: <a href="http://vce.ac.in">www.vce.ac.in</a>
-					</div>
-				</div>
-
-				<div class="col-lg-2"></div>				
-
-				<div class="col-lg-5 col-md-6 col-sm-6">
-					<div class="single-footer-widget news_widgets">
-						<h6 class="footer_title">Leave a Reply</h6>
-						<p>Your email address will not be published. </p>
-						<div id="mc_embed_signup">
-							<form id="feedback" action="#" class="subscribe_form relative">
-								<div class="input-group d-flex flex-row">
-									<input type="text" id="comment" name="COMMENT" placeholder="Write a comment"
-										cols="45" rows="4" maxlength="65525" required></textarea><br>
-									<input id="name" name="NAME" placeholder="Your name" onfocus="this.placeholder = ''"
-										onblur="this.placeholder = 'Name'" required><br>
-									<input id="email" name="EMAIL" placeholder="Your email address"
-										onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '"
-										required type="email"><br><br>
-									<input type="button" onclick="submitFeedback()" id="commentBtn" class="btn sub-btn" style="position: static;" value="Post Comment">
-								</div>
-								
-							</form>
+	 <!--================ start footer Area  =================-->
+	 <footer class="footer-area pad_top pad_btm_50" height="auto">
+			<div class="container">
+				<div class="row" style="text-align: center; margin:auto;">
+					<div class="col-lg-1 col-md-2 col-sm-2"></div>
+					<div class="col-lg-3  col-md-6 col-sm-6">
+						<div class="single-footer-widget tp_widgets">
+							<h6 class="footer_title">Contact Us</h6>
+							Vasavi College of Engineering<br />
+							<em><small> (Private Un-aided Non-minority
+									Autonomous Institution)<br /></small></em>
+							Affiliated to Osmania University, Hyderabad <br />
+							Approved by AICTE, New Delhi<br />
+							9-5-81, Ibrahimbagh<br />
+							Hyderabad - 500 031<br />
+							Telangana, India<br /><br />
+	
+							Tel: +91 40 23146003<br />
+							Fax: +91 40 23146090<br /> <br />
+	
+							<!-- <a
+								   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
+									   class="__cf_email__"
+									   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
+							Email: <a href="mailto:principal@vce.ac.in">principal@vce.ac.in</a>
 						</div>
 					</div>
-					<div id="snackbar"></div>
+	
+					<div class="col-lg-2"></div>
+	
+					<div class="col-lg-5 col-md-6 col-sm-6">
+						<div class="single-footer-widget news_widgets">
+							<h6 class="footer_title">Leave a Reply</h6>
+							<p>Your email address will not be published. </p>
+							<div id="mc_embed_signup">
+								<form id="feedback" action="#" class="subscribe_form relative" onsubmit="">
+									<div class="input-group d-flex flex-row">
+										<input type="text" id="comment" name="COMMENT" placeholder="Write a comment"
+											cols="45" rows="4" maxlength="65525" required></textarea><br>
+										<input id="name" name="NAME" placeholder="Your name" onfocus="this.placeholder = ''"
+											onblur="this.placeholder = 'Name'" required><br>
+										<input id="email" name="EMAIL" placeholder="Your email address"
+											onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '; ValidateEmail();"
+											required type="email" ><br><br>
+										<input type="submit" onclick="submitFeedback()" id="commentBtn" class="btn sub-btn"
+											style="position: static;" value="Post Comment">
+									</div>
+	
+								</form>
+							</div>
+						</div>
+						<div id="snackbar"></div>
+					</div>
+					<div class="col-lg-1"></div>
 				</div>
-				<div class="col-lg-1"></div>
+				<div class="row footer-bottom d-flex justify-content-between align-items-center">
+					<p class="col-lg-8 col-md-8 footer-text m-0">
+						Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
+						Rights Reserved.</p>
+					<div class="col-lg-4 col-md-4 footer-social">
+						<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+					</div>
+				</div>
 			</div>
-			<div class="row footer-bottom d-flex justify-content-between align-items-center">
-				<p class="col-lg-8 col-md-8 footer-text m-0">
-					Copyright &copy;2019. Vasavi College of Engineering, Ibrahimbagh, Hyderabad, India. All
-					Rights Reserved.</p>
-				<div class="col-lg-4 col-md-4 footer-social">
-					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+		</footer>
+		<!--================ End footer Area  =================-->
+	
+		<!--================Contact Success and Error message Area =================-->
+		<div id="success" class="modal modal-message fade" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<i class="fa fa-close"></i>
+						</button>
+						<h2>Thank you</h2>
+						<p>Your message is successfully sent...</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</footer>
-	<!--================ End footer Area  =================-->
-
-
-
-
-	<!-- Optional JavaScript -->
-	<script>
-		function submitFeedback() {
-			var x = document.getElementById("snackbar");
-			
-			comment = document.getElementById("comment").value;
-			name = document.getElementById("name").value;
-			email = document.getElementById("email").value;
-			url = "https://docs.google.com/forms/d/e/1FAIpQLSfgTfhijWCxTZsfxbpUb_nuH6Cdi6c1VqYweh2oB9CLspNy0w/formResponse?usp=pp_url&entry.62543713=" + comment + "&entry.722919610=" + name + "&entry.318867963=" + email + "&submit=Submit";
-
-			var xhttp = new XMLHttpRequest();
-			xhttp.onreadystatechange = function() {
-				if(this.readyState==4){
-					x.className = "show";
-					document.getElementById("commentBtn").disabled = true;
-					if (this.status == 200) {
-						document.getElementById("snackbar").innerHTML = 'Message Sent Successfully';
-						document.getElementById("feedback").reset();
-						setTimeout(function(){ x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false;}, 3000);
-					}
-					else{
-						document.getElementById("snackbar").innerHTML = 'Could not send message. Please try later';
-						setTimeout(function(){ x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false;}, 3000);
-					}
+	
+		<!-- Modals error -->
+	
+		<div id="error" class="modal modal-message fade" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<i class="fa fa-close"></i>
+						</button>
+						<h2>Sorry !</h2>
+						<p> Something went wrong </p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--================End Contact Success and Error message Area =================-->
+	
+	
+		<script>
+			function ValidateEmail() {
+				var x = document.getElementById("snackbar");
+				email = document.getElementById("email").value;
+	
+				var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+	
+	
+				if (re.test(email)) {
+					return true;
 				}
-			};
-			xhttp.open("GET", url, true);
-			xhttp.send();
-
-		}
-	</script>
+				document.getElementById("commentBtn").disabled = true;
+				x.className = "show";
+				document.getElementById("snackbar").innerHTML = 'Please Enter a Valid Email ID';
+				setTimeout(function () { x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false; }, 3000);
+				return false;        }
+	
+			function submitFeedback() {
+				var x = document.getElementById("snackbar");
+	
+				comment = document.getElementById("comment").value;
+				name = document.getElementById("name").value;
+				email = document.getElementById("email").value;
+	
+				document.getElementById("commentBtn").disabled = true;
+	
+				if (comment === "") {
+					x.className = "show";
+					document.getElementById("snackbar").innerHTML = 'Please Enter the Comment';
+					setTimeout(function () { x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false; }, 3000);
+					return false;
+				}
+				if (name == "") {
+					name = "Anonymous";
+				}
+				if (!ValidateEmail(email)) {
+					document.getElementById("commentBtn").disabled = true;
+					return false;
+				}
+	
+				url = "https://docs.google.com/forms/d/e/1FAIpQLSfgTfhijWCxTZsfxbpUb_nuH6Cdi6c1VqYweh2oB9CLspNy0w/formResponse?usp=pp_url&entry.62543713=" + comment + "&entry.722919610=" + name + "&entry.318867963=" + email + "&submit=Submit";
+	
+	
+				var xhttp = new XMLHttpRequest();
+				xhttp.onreadystatechange = function () {
+					if (this.readyState == 4) {
+						x.className = "show";
+						if (this.status == 200 || this.status == 0) {
+							document.getElementById("snackbar").innerHTML = 'Message Sent Successfully';
+							document.getElementById("feedback").reset();
+							setTimeout(function () { x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false; }, 3000);
+						}
+						else {
+							document.getElementById("snackbar").innerHTML = 'Could not send message. Please try later';
+							setTimeout(function () { x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false; }, 3000);
+						}
+					}
+				};
+				xhttp.open("GET", url, true);
+				xhttp.send();
+	
+			}
+		</script>
+	
 
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
