--- a/about-us.html
+++ b/about-us.html
@@ -63,8 +63,8 @@
 								</li>
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Registrations</a> 
 								<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a>
-								<li class="nav-item"><a class="nav-link" href="committees.html">committees </a>
-								<li class="nav-item"><a class="nav-link" href="speakers.html">Accomodation</a>
+								<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a>
+								<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a>
 								<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
