updated footer and included register.html

--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
-									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
+									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
 							</li>
-							<li class="nav-item"><a class="nav-link" href="speakers.html">Registrations</a>
-							<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a>
-							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a>
+							<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
+							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+
 
 							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
@@ -82,7 +83,7 @@
 							</li> -->
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
-							<li class="nav-item"><a href="./contact.html" class="tickets_btn">Contact</a></li>
+							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul>
 					</div>
 				</div>
