--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
                     <!-- Brand and toggle get grouped for better mobile display -->
+
                     <a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -59,20 +60,30 @@
                             <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
                             <li class="nav-item submenu dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">About</a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
+                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+
+
+                            <!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
-							</li>
-                            <li class="nav-item"><a class="nav-link" href="speakers.html">Registrations</a>
-                            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a>
-							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a>
-							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a>
-                            <li class="nav-item"><a class="nav-link" href="speakers.html">Schedule</a>
+							</li> -->
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="nav-item"><a href="#" class="tickets_btn">Contact</a></li>
+                            <li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
                         </ul>
                     </div>
                 </div>
@@ -179,8 +190,9 @@
                                     <input id="name" name="NAME" placeholder="Your name" onfocus="this.placeholder = ''"
                                         onblur="this.placeholder = 'Name'" required><br>
                                     <input id="email" name="EMAIL" placeholder="Your email address"
-                                        onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '; ValidateEmail();"
-                                        required type="email" ><br><br>
+                                        onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Email Address '; ValidateEmail();" required
+                                        type="email"><br><br>
                                     <input type="submit" onclick="submitFeedback()" id="commentBtn" class="btn sub-btn"
                                         style="position: static;" value="Post Comment">
                                 </div>
@@ -252,7 +264,8 @@
             x.className = "show";
             document.getElementById("snackbar").innerHTML = 'Please Enter a Valid Email ID';
             setTimeout(function () { x.className = x.className.replace("show", ""); document.getElementById("commentBtn").disabled = false; }, 3000);
-            return false;        }
+            return false;
+        }
 
         function submitFeedback() {
             var x = document.getElementById("snackbar");
