cleanup and nav update

--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/logo.png" type="image/png">
-    <title>Conference</title>
+    <title>Register</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -93,14 +93,6 @@
                             <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
                             <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
-
-                            <!-- <li class="nav-item submenu dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
-                                        <li class="nav-item"><a class="nav-link" href="details.html">Event</a>
-                                    </ul>
-                                </li> -->
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
@@ -131,7 +123,7 @@
     <!--================End Home Banner Area =================-->
 
     <!--================Event Time Area =================-->
-    <section class="event_time_area ab_event pad_top">
+    <section class="event_time_area ab_event pad_top pad_btm_50">
         <div class="container">
             <div class="event_time_inner">
                 <div class="row">
