--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 		<div class="banner_inner">
 			<div class="container">
 				<div class="banner_content">
-					<h2>Conference Title</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua.</p>
+					<h2>4th International Conference on Smart Computing & Informatics (SCI-2020)</h2>
+					<h4>June 5,6 2020</h4>
+					<p>Organized by <h3 style="padding:0">Vasavi College of Engineering</h3></p>
 					<a class="banner_btn" href="details.html">View More Details</a>
 				</div>
 			</div>
